--- a/package.json
+++ b/package.json
@@ -8,8 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.3.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
+    "@prisma/client": "^2.18.0",
+    "framer-motion": "^3.9.0",
     "next": "10.0.7",
+    "next-auth": "^3.6.1",
+    "prisma": "^2.18.0",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-query": "^3.12.0"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.31",
+    "@types/react": "^17.0.2",
+    "faker": "^5.4.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
   }
 }
